# klynt

./: .dockerignore  .editorconfig  .env.example  .gitignore  .memory.md  .trivyignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  UBIQUITOUS_LANGUAGE.md  VIRTUAL_DESKTOP_QA_TEST_PLAN.md  docker-compose.dev.yml  docker-compose.yml  justfile  lefthook.yml  package-lock.json
backend/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/.cargo/: audit.toml
backend/.sqlx/: query-06e4d94ce34751fa9abc0cb886503b6f912e3897ab086f0787c5cc6d43477746.json  query-07f61f58907f1123e430ed6a01cef8eb63f7a26d1103fa2717b8c1fa7c1594e0.json  query-0891f7a0a2367a365a024ed88eb8e28077089df441c05c819a29de46126b23ef.json  query-0963ff81ae1e909c2f644a72c0e8bc2a27235ef38fd08fbccb8b978781deb2fd.json  query-0b6852bcd6c964f9310075a6dc4e4f4ff148a81f1720f26f7e7ef7a2f42edbc3.json  query-0bc47adbe0e140c4e6f397e24338c5b23f8a3bc5eb9f9b0644cb4b9f531fcd02.json  query-0e556d538db5dc577418db9bc8f1a5717caf9dc649a4fdffcbd136ab4a5672a5.json  query-1444ce354496503f1b86e82cebfdc926903acc3049abbf045a827a2d83f29c63.json  query-15cc2fe28b82a9f29c6d1822f6b65f2168555f11393d9807ddc0bb60420ea84b.json  query-165f18a561b2da859e7b642a3d536b96f9baa892e6f2fba8cdb6574a4e57413e.json  query-187f1e8922968b05215992d300cd8a5ead4c6eb1b518d0b7a27f1d2fbd19e9cd.json  query-18e9d2b433eb096cbcb50cdd88822362f39b6270639f5f0198611321aaa74ed1.json  query-18fb9e78064c35a300273d319a22b5982bbe230a7099fe98d2b3ea2ccf23c6db.json  query-190680db1ba34e850d0131d1c2bf7011c9e8fffcf0616f1945f8a8986ab2c59a.json  query-1d282c634843684792d8f8259f5450f16edd21fdec106a8859543369b6aa6bcb.json  query-1d4ac4b86302cc7cbab2bea6fd2aaebe3884c20dea4c1b0450d43aa8b7b1b0f1.json  query-1d5e8a9296cb77e94980a2ddee3baf6a7bed7f24a5c7ec33e25ea774f2156ca2.json  query-247b1ec71a9bf26ed419c03269a4b5a6696406f9f4b56f377867f22456d1fa31.json  query-2c099f5a897fe20ed4788ae47259546c1f74f396e17ed69cd6fc3448e3bad173.json  query-2c5bffdecb1b74139b278c29ae138a1883ce28f6e2038ff48f6fc87786163bfa.json  query-2d919166f53e56765b2cb501d741bbb2af7ad5d6c530984a7dd862f82d85e173.json  query-30734ac958b4381a50bfe3f8a52ee4017a2a93b8b18e3ba53326962fa1d303ab.json  query-35d0bbb80dcb574e4c8e53f3459e6aea53c8525bfe1802611851abea10da1e32.json  query-35d20d672c49d364be547e75c43f5d3f724928475aea75578068bcf04c23b4e7.json  query-3965ad32f6a94961b96f017ccaad19a008587dfccdf6dd461758797149b3a50c.json  query-3cfa1c70474b82f5ccaab14d55a324ffa4855db06d5cd5b2925e28e433f4516a.json  query-3fe6c50427bc6d006f4ab0e572c03eb92a06e4adc9e741c9092fb188adb8d9ce.json  query-42f92ff4806a0244cb1fd0cfccdc004bac1e9faa192ff22c13a4aa8866b21cda.json  query-447d6ac212f47baf07173702d324e835c04f923adc3ad7b3cf0f5dd0862ccfea.json  query-488d7e312b1a332de9e02c0a08cead3eeb044f923bba7c374f6f6101b24dd8ce.json  query-492c5e641ab228220ae9d9bce1eefb73801cceda0d085c462fbcea64f2fa13e7.json  query-4a82a0e04f074d412eb2a62e3dd53a35b56afb2bf8e9dc0412bbb721f49572f6.json  query-4bebc1b3bd76084b0a6ecbe381fed5c4dfe73c26a2f7c8bc21118f537d92557a.json  query-4cf8c45c6449f308b5c3d722cd1010af94e6e7be90f415c7578fd9299425ab07.json  query-4da39c2ca1052a4c84b0531cc97ed449da10a13f3c3cd56074661295466df0d1.json  query-4e60b63201f01a6fe14c0312d99a87b2e5f993a25fa1ce9d30e243c7e64680a1.json  query-508638791baf78bcdd8f1cf36beb73dbb872e6ae06280e6d304715665fb75b7a.json  query-517e992007cb2c0b1aaf586a7acb47c6e55a6715c0dbad081b8346a4aaba642f.json  query-5974a3ce5089772a23372d3118be35ead0356c8368d87c83d1023fe2f49c74f3.json  query-6093e5d099c317105c2c08591e9a5992c9da25268816fa40fd18119933a80388.json  (+75 more)
backend/config/: default.toml
backend/crates/base/: AGENTS.md  Cargo.toml  README.md
backend/crates/core/klynt_base/: Cargo.toml
backend/crates/core/klynt_core/: Cargo.toml  README.md
backend/crates/gateways/: AGENTS.md  Cargo.toml
backend/crates/gateways/api_gateway/: Cargo.toml  README.md
backend/crates/gateways/src/: constants.rs  error.rs  lib.rs  openapi.yaml  response.rs
backend/crates/gateways/tests/: auth.rs  config_from_env.rs  desktop_apps.rs  health_metrics.rs  integration.rs  rate_limit.rs  real_services.rs  role_routes_test.rs  session_routes_test.rs  tenant_invite_test.rs  tenant_routes_test.rs
backend/crates/infra/config/: AGENTS.md  Cargo.toml
backend/crates/infra/observability/: AGENTS.md  Cargo.toml
backend/crates/infra/persistence/: AGENTS.md  Cargo.toml
backend/crates/klynt-api/: Cargo.toml
backend/crates/klynt-application/: Cargo.toml
backend/crates/klynt-domain/: Cargo.toml
backend/crates/klynt-infrastructure/: Cargo.toml  README.md
backend/crates/klynt-server/: AGENTS.md  Cargo.toml
backend/crates/klynt_base/: AGENTS.md  Cargo.toml  README.md
backend/crates/server/: AGENTS.md  Cargo.toml
backend/docs/: ARCHITECTURE_DEEPENING.md
backend/migrations/: 0001_initial_schema.sql  0002_add_audit_table.sql  0003_add_user_role_and_institution.sql  0004_add_user_deleted_at.sql  0004_remove_unused_uuid_ossp.sql  0005_fix_pgcrypto_and_audit_ip.sql  0006_update_audit_ip_comment.sql  0007_add_session_kind_and_pair.sql  0008_add_tenants_and_memberships.sql  0009_add_permissions_and_roles.sql  0010_tenant_invites_and_membership_status.sql  0011_add_username_to_users.sql  0012_tenant_desktop_layout.down.sql  0012_tenant_desktop_layout.up.sql  0013_users_list_index.down.sql  0013_users_list_index.up.sql  0014_desktop_apps.down.sql  0014_desktop_apps.up.sql  0015_icon_tree_migration.down.sql  0015_icon_tree_migration.up.sql
backend/scripts/: check-file-size.sh  check-sqlx-macros.sh
backend/src/: config.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs
backend/src/api/: mod.rs
backend/src/api/v1/: mod.rs  (+1 more)
backend/src/application/: mod.rs  request_gate.rs  users.rs
backend/src/contracts/: users.rs
backend/src/domain/: ctx.rs  errors.rs  mod.rs  models.rs  ports.rs  repositories.rs  unit_of_work.rs
backend/src/infrastructure/: mod.rs  rate_limiter.rs  unit_of_work.rs
backend/tests/: helpers.rs  repository_conformance.rs  users.rs
backend/tests/common/: mod.rs  repository_conformance.rs
(+1561 files in other folders)
