[workspace]
resolver = "2"
members = [
    "crates/klynt_base",
    "crates/shared/klynt_domain",
    "crates/infrastructure/klynt_persistence",
    "crates/infrastructure/klynt_telemetry",
    "crates/infrastructure/klynt_config",
    "crates/services/auth_service",
    "crates/services/user_service",
    "crates/services/session_service",
    "crates/gateways",
    "crates/klynt-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1"

# Error handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = "0.2"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Crypto
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "json"] }

# Cache / rate limiter
redis = { version = "0.27", features = ["tokio-comp"] }

# Metrics
prometheus = { version = "0.13", default-features = false }

# Internal crates
klynt_base = { path = "crates/klynt_base" }
klynt_domain = { path = "crates/shared/klynt_domain" }
klynt_persistence = { path = "crates/infrastructure/klynt_persistence" }
klynt_telemetry = { path = "crates/infrastructure/klynt_telemetry" }
klynt_config = { path = "crates/infrastructure/klynt_config" }

# Services
auth_service = { path = "crates/services/auth_service" }
user_service = { path = "crates/services/user_service" }
session_service = { path = "crates/services/session_service" }

# Gateway
gateways = { path = "crates/gateways" }

[workspace.lints.rust]
unsafe_code = "forbid"
