[workspace]
resolver = "2"
members = [
    "crates/base",
    "crates/shared/domain",
    "crates/infra/persistence",
    "crates/infra/observability",
    "crates/infra/config",
    "crates/services/auth_service",
    "crates/services/user_service",
    "crates/services/session_service",
    "crates/services/tenant_service",
    "crates/services/cleanup_job",
    "crates/services/infra_facades",
    "crates/gateways",
    "crates/server",
    "crates/services/session_coordinator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

# Web framework
axum = "0.8"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1"

# Error handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = "0.2"

# Configuration
config_crate = { package = "config", version = "0.15" }
dotenvy = "0.15"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Crypto
rand = "0.10"
sha2 = "0.11"
base64 = "0.22"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Networking
ipnet = "2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "json"] }

# Cache / rate limiter
redis = { version = "1.3", features = ["tokio-comp"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Benchmarks
criterion = { version = "0.5", features = ["async_tokio"] }

# Internal crates
base = { path = "crates/base" }
domain = { path = "crates/shared/domain" }
persistence = { path = "crates/infra/persistence" }
observability = { path = "crates/infra/observability" }
config = { path = "crates/infra/config" }

# Services
auth_service = { path = "crates/services/auth_service" }
user_service = { path = "crates/services/user_service" }
session_service = { path = "crates/services/session_service" }
cleanup_job = { path = "crates/services/cleanup_job" }

# Gateway
gateways = { path = "crates/gateways" }

# Cookies
tower-cookies = "0.11"

[workspace.lints.rust]
unsafe_code = "forbid"
