[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
# Time
chrono = { workspace = true }

# IDs
uuid = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Web framework (used only for the HTTP-agnostic status code abstraction)
axum = { workspace = true }

# Database
sqlx = { workspace = true }

# Internal crates
domain = { path = "../shared/domain" }

[features]
testkit = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
