[package]
name = "gateways"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Services ===
auth_service = { path = "../services/auth_service" }
user_service = { path = "../services/user_service" }

# === Phase 1 Foundation ===
klynt_core = { path = "../core/klynt_core" }
klynt_contracts = { path = "../shared/klynt_contracts" }
klynt_shared_domain = { path = "../shared/klynt_domain" }
klynt_utils = { path = "../shared/klynt_utils" }
klynt_tracing = { path = "../infrastructure/klynt_tracing" }

# === Storage and infrastructure adapters ===
klynt_storage = { path = "../infrastructure/klynt_storage" }
klynt-infrastructure = { path = "../klynt-infrastructure" }
klynt_audit = { path = "../infrastructure/klynt_audit" }

# === Web Framework ===
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# === Async Runtime ===
tokio = { workspace = true }
async-trait = { workspace = true }

# === Serialization ===
serde = { workspace = true }
serde_json = { workspace = true }

# === Error Handling ===
thiserror = { workspace = true }
anyhow = { workspace = true }

# === Tracing ===
tracing = { workspace = true }

# === Configuration ===
config = { workspace = true }

# === Time ===
chrono = { workspace = true }

# === IDs ===
uuid = { workspace = true }

# === Database ===
sqlx = { workspace = true }

[dev-dependencies]
