[package]
name = "gateways"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Services ===
auth_service = { path = "../services/auth_service" }
user_service = { path = "../services/user_service" }

# === Phase 1 Foundation ===
klynt_base = { path = "../klynt_base" }
klynt_common = { path = "../shared/klynt_common" }

# === Storage and infrastructure adapters ===
klynt_persistence = { path = "../infrastructure/klynt_persistence" }
klynt_telemetry = { path = "../infrastructure/klynt_telemetry" }

# === Web Framework ===
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# === Async Runtime ===
tokio = { workspace = true }
async-trait = { workspace = true }

# === Serialization ===
serde = { workspace = true }
serde_json = { workspace = true }

# === Error Handling ===
thiserror = { workspace = true }
anyhow = { workspace = true }

# === Tracing ===
tracing = { workspace = true }

# === Configuration ===
config = { workspace = true }
klynt_config = { workspace = true }

# === Time ===
chrono = { workspace = true }

# === IDs ===
uuid = { workspace = true }

# === Database ===
sqlx = { workspace = true }

[dev-dependencies]
