[package]
name = "gateways"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Services ===
auth_service = { path = "../services/auth_service" }
user_service = { path = "../services/user_service" }
session_service = { path = "../services/session_service" }
tenant_service = { path = "../services/tenant_service" }
session_coordinator = { path = "../services/session_coordinator" }

# === Phase 1 Foundation ===
base = { path = "../base" }
domain = { path = "../shared/domain" }

# === Storage and infrastructure adapters ===
persistence = { path = "../infra/persistence" }
observability = { path = "../infra/observability" }

# === Web Framework ===
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

# === Async Runtime ===
tokio = { workspace = true }
async-trait = { workspace = true }

# === Serialization ===
serde = { workspace = true }
serde_json = { workspace = true }

# === Error Handling ===
thiserror = { workspace = true }
anyhow = { workspace = true }

# === Tracing ===
tracing = { workspace = true }

# === Configuration ===
config_crate = { workspace = true }
config = { workspace = true }

# === Time ===
chrono = { workspace = true }

# === IDs ===
uuid = { workspace = true }

# === Metrics ===
metrics = { workspace = true }

# === Cache (used by Redis health check wiring) ===
redis = { workspace = true }

# === Networking ===
ipnet = { workspace = true }

# === Database ===
sqlx = { workspace = true }

[dev-dependencies]
base = { path = "../base", features = ["testkit"] }
