[package]
name = "klynt-api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }
klynt-application = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
http-body-util = "0.1"
