[package]
name = "klynt-api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }
klynt-application = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
http-body-util = "0.1"
async-trait = { workspace = true }
