[package]
name = "klynt-application"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
