[package]
name = "klynt-application"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
klynt-infrastructure = { workspace = true }
