[package]
name = "klynt-application"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
klynt-infrastructure = { workspace = true }
