[package]
name = "klynt-domain"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
