[package]
name = "klynt-infrastructure"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
