[package]
name = "klynt-infrastructure"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }
klynt_shared_domain = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
