[package]
name = "klynt-infrastructure"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
klynt_core = { path = "../core/klynt_core" }
klynt_utils = { path = "../shared/klynt_utils" }
klynt_shared_domain = { workspace = true }
klynt_storage = { path = "../infrastructure/klynt_storage" }
klynt_audit = { path = "../infrastructure/klynt_audit" }

chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
