[package]
name = "klynt-server"
version.workspace = true
edition.workspace = true

[lib]
name = "klynt_server"
path = "src/lib.rs"

doctest = false

[[bin]]
name = "klynt-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
klynt-domain = { workspace = true }
klynt-application = { workspace = true }
klynt-infrastructure = { workspace = true }
klynt-api = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
prometheus = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
http-body-util = "0.1"
futures = "0.3"
tower = { workspace = true }
async-trait = { workspace = true }
