[package]
name = "klynt-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "klynt-server"
path = "src/main.rs"

doctest = false

[lints]
workspace = true

[dependencies]
gateways = { workspace = true }

tokio = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
