[package]
name = "klynt_base"
version = "0.1.0"
edition = "2021"

[dependencies]
# Time
chrono = { workspace = true }

# IDs
uuid = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Internal crates
klynt_common = { path = "../shared/klynt_common" }
