[package]
name = "observability"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
base = { path = "../../base" }
domain = { path = "../../shared/domain" }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Database / cache (used by concrete health checks)
sqlx = { workspace = true }
redis = { workspace = true }
