[package]
name = "klynt_persistence"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
klynt_base = { path = "../../klynt_base" }
klynt_config = { path = "../klynt_config" }
klynt_domain = { path = "../../shared/klynt_domain" }
klynt_telemetry = { path = "../klynt_telemetry" }

# Database
sqlx = { workspace = true }

# Cache / rate limiter
redis = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# Crypto (tokens)
rand = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }

# Time
chrono = { workspace = true }

# IDs
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
