[package]
name = "klynt_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { workspace = true }

# Async
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Internal crates
klynt_core = { path = "../../core/klynt_core" }
klynt_utils = { path = "../../shared/klynt_utils" }
klynt_shared_domain = { path = "../../shared/klynt_domain" }

# Crypto (tokens)
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Time
chrono = { workspace = true }

# IDs
uuid = { workspace = true }

# Serialization
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
