[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Phase 1 Foundation ===
klynt_base = { path = "../../../crates/klynt_base" }
klynt_common = { path = "../../shared/klynt_common" }

# === Storage and infrastructure adapters ===
klynt_persistence = { path = "../../../crates/infrastructure/klynt_persistence" }
klynt_telemetry = { path = "../../../crates/infrastructure/klynt_telemetry" }

# === Async Runtime ===
tokio = { workspace = true }
async-trait = { workspace = true }

# === Serialization ===
serde = { workspace = true }

# === Time ===
chrono = { workspace = true }

# === IDs ===
uuid = { workspace = true }

# === Validation ===
validator = { workspace = true }

# === Error Handling ===
thiserror = { workspace = true }

# === Tracing ===
tracing = { workspace = true }

# === Crypto ===
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
