[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Phase 1 Foundation ===
base = { path = "../../../crates/base" }
domain = { path = "../../shared/domain" }
session_service = { path = "../session_service" }

# === Storage and infrastructure adapters ===
infra_facades = { path = "../infra_facades" }

# === Async Runtime ===
tokio = { workspace = true }
async-trait = { workspace = true }

# === Time ===
chrono = { workspace = true }

# === IDs ===
uuid = { workspace = true }

# === Validation ===
validator = { workspace = true }

# === Error Handling ===
thiserror = { workspace = true }

# === Tracing ===
tracing = { workspace = true }

# === Crypto ===
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
base = { path = "../../../crates/base", features = ["testkit"] }
