[package]
name = "cleanup_job"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
base = { workspace = true }
persistence = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
