[package]
name = "session_service"
version.workspace = true
edition.workspace = true

[dependencies]
klynt_base = { path = "../../../crates/klynt_base" }
klynt_common = { path = "../../shared/klynt_common" }
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
