[package]
name = "session_service"
version = "0.1.0"
edition = "2021"

[dependencies]
klynt_base = { path = "../../../crates/klynt_base" }
klynt_domain = { path = "../../shared/klynt_domain" }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
klynt_base = { path = "../../../crates/klynt_base", features = ["testkit"] }
async-trait = { workspace = true }
tokio = { workspace = true }
