[package]
name = "tenant_service"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../../crates/base" }
domain = { path = "../../shared/domain" }
chrono = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
observability = { path = "../../../crates/infra/observability" }
persistence = { path = "../../../crates/infra/persistence" }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
