[package]
name = "tenant_service"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../../crates/base" }
domain = { path = "../../shared/domain" }
session_coordinator = { path = "../session_coordinator" }
infra_facades = { path = "../infra_facades" }
chrono = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
base = { path = "../../../crates/base", features = ["testkit"] }
observability = { path = "../../../crates/infra/observability" }
persistence = { path = "../../../crates/infra/persistence" }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
