[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Phase 1 Foundation ===
base = { path = "../../../crates/base" }
domain = { path = "../../shared/domain" }

# === Storage and infrastructure adapters ===
persistence = { path = "../../../crates/infra/persistence" }
observability = { path = "../../../crates/infra/observability" }

# === Async Runtime ===
tokio = { workspace = true }
async-trait = { workspace = true }

# === Time ===
chrono = { workspace = true }

# === IDs ===
uuid = { workspace = true }

# === Validation ===
validator = { workspace = true }

# === Error Handling ===
thiserror = { workspace = true }

# === Serialization ===
serde_json = { workspace = true }

# === Web framework (status-code mapping only) ===
axum = { workspace = true }

# === Database ===
sqlx = { workspace = true }

[dev-dependencies]
base = { path = "../../../crates/base", features = ["testkit"] }
