[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Phase 1 Foundation ===
base = { path = "../../../crates/base" }
domain = { path = "../../shared/domain" }

# === Storage and infrastructure adapters ===
infra_facades = { path = "../infra_facades" }

# === Async Runtime ===
tokio = { workspace = true }
async-trait = { workspace = true }

# === Time ===
chrono = { workspace = true }

# === IDs ===
uuid = { workspace = true }

# === Validation ===
validator = { workspace = true }

# === Error Handling ===
thiserror = { workspace = true }

[dev-dependencies]
base = { path = "../../../crates/base", features = ["testkit"] }
observability = { path = "../../../crates/infra/observability" }
persistence = { path = "../../../crates/infra/persistence" }
sqlx = { workspace = true }
